# app/Model/Core/Evidence.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Model\Core;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Facades\DB;
+
+class Evidence extends Model
+{
+    protected $table = 'evidences';
+    protected $fillable = [
+        'id',        
+        'name',
+        'file',
+        'type',
+        'approved',
+        'report_id'        
+    ];
+}
