# app/Query/Request/EvidenceQuery.php
@@ -10,19 +10,19 @@ use Illuminate\Support\Facades\Validator;
 use Illuminate\Support\Facades\File;
 use Illuminate\Support\Facades\Log;
 
-use App\Query\Abstraction\IEmployeeEvidenceQuery;
+use App\Query\Abstraction\IEvidenceQuery;
 
-class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
+class EvidenceQuery implements IEvidenceQuery
 {
     private $name = 'name';
     private $file = 'file';
     private $type = 'type';
     private $approved = 'approved';
-    private $employee_report_id = 'employee_report_id';
+    private $report_id = 'report_id';
 
     public function index(Request $request){
         try {
-            $evidences = EmployeeEvidence::select(['id', 'file', 'approved', 'employee_report_id'])
+            $evidences = EmployeeEvidence::select(['id', 'file', 'approved', 'report_id'])
                 ->orderBy('id', $request->sort ?? 'ASC')
                 ->paginate($request->limit ?? 10, ['*'], '', $request->page ?? 1);
 
@@ -44,7 +44,7 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
             $this->name => 'required|string|min:1|max:128|',
             $this->file   => 'required',
             $this->type   => 'required',
-            $this->employee_report_id   => 'required'
+            $this->report_id   => 'required'
         ];
         try {
 
@@ -81,7 +81,7 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
                         $this->name                 => 'required|string|min:1|max:128|',
                         $this->type                 => 'required|string|min:1|max:128|',
                         $this->approved             => 'numeric',
-                        $this->employee_report_id   => 'numeric',
+                        $this->report_id   => 'numeric',
                         
                     ];
                     $validator = Validator::make($request->all(), $rules);
@@ -92,7 +92,7 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
                     $evidence->name = $request->name ?? $evidence->name;
                     $evidence->type = $request->type ?? $evidence->type;
                     $evidence->approved = $request->approved ?? $evidence->approved;
-                    $evidence->employee_report_id = $request->employee_report_id ?? $evidence->employee_report_id;
+                    $evidence->report_id = $request->report_id ?? $evidence->report_id;
                     
                     $evidence->save();
                     return response()->json([
@@ -137,7 +137,7 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
         }
     }
 
-    public function showByEmployeeEvidenceId(Request $request, int $id){
+    public function showByEvidenceId(Request $request, int $id){
         
         if ($id) {
             try {
@@ -147,9 +147,9 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
                     'file',
                     'type',
                     'approved',
-                    'employee_report_id'
+                    'report_id'
                 )
-                ->where('employee_report_id',$id)
+                ->where('report_id',$id)
                 ->get();
                 
                 return response()->json([
@@ -164,7 +164,7 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
         }
     }
 
-    public function showByEmployeeReportId(Request $request, int $id){
+    public function showByReportId(Request $request, int $id){
         
         if ($id) {
             try {
@@ -174,9 +174,9 @@ class EmployeeEvidenceQuery implements IEmployeeEvidenceQuery
                     'file',
                     'type',
                     'approved',
-                    'employee_report_id'
+                    'report_id'
                 )
-                ->where('employee_report_id',$id)
+                ->where('report_id',$id)
                 ->get();
                 
                 return response()->json([
